  * Made it more practical to find and obtain the Void Armor item.

* Units:
  * Chaos Cardinal migrated to Naia and expanded with a new baseframe by VYNLT
    and slightly different stats over the mainline Ancient Lich.
  * Use 1.14 rodent fangs icon for the Rabbit's incisors attack.
  * Chaos Hound line is now considered part of the wolves race and receives
    names and traits accordingly.


Version 2.1.1:
--------------
* General:
  * Update to Naia 20180722.

* Units:
  * Revised Elvish Avatar (Anlindë)'s AMLA tree:
    * XP increase for all AMLAs is 15%.
  * Revised Lady of Light (Elynia)'s AMLA tree:
    * XP increase for all AMLAs is 15%.
    * Base XP decreased from 90 XP to 70 XP.
    * Strength I: HP +4, melee dmg +1.
    * Strength II: HP +4, melee str +1.
    * Strength III: HP +5.
    * Strength IV: HP +5, melee dmg +1.
    * Strength V: HP +7.
    * Focus I: faerie fire dmg +1, requires Strength I.
    * Focus II: faerie fire str +1, requires Strength III.
    * Focus III: ensnare str +1, requires Strength IV.
    * Shielding I: arcane res +10%, requires Focus I.
    * Shielding II: arcane res +10%, impact res +10%, requires Focus II.
    * Shielding III: arcane res +10%, cold res +10%, requires Strength IV.
    * Thorns I: new attack - ranged pierce magical+drain 10-2.
    * Thorns II: thorns str +1.
    * Thorns III: thorns dmg +2.


Version 2.1.0:
--------------
* General:
  * Wesnoth 1.14 support implememented, raising the minimum version requirement
    to Wesnoth 1.13.12 (Wesnoth 1.15.x is *not* supported yet). Some large
    chunks of code (in particular FOREACH loops) were rewritten in the
    process.
  * Shared units, assets, code, and translations are now part of the Naia
    library, also used by AtS version 0.10.0 and later.

* Language and i18n:
  * Removed empty Dutch translation.

* Music:
  * Added Aleksi's gameplay06.ogg to IftU Music 0.3.1.

* Scenarios:
  * General:
    * Revised a few maps to use 1.14 terrains.