@@ -134,7 +134,7 @@ n,s,ne,nw,se,sw#enddef
 #define ELVISH_SUPPORTER_ROLE ROLE
     [role]
         role={ROLE}
-        type=Elvish Sylph,Elvish Shyde,Elvish Avenger,Elvish Sharpshooter,Elvish Enchantress,Elvish Enchantress 2,Elvish Champion,Elvish Marshal,Elvish Outrider,Elvish Ranger,Elvish Marksman,Elvish Sorceress,Elvish Hero,Elvish Captain,Elvish Druid,Elvish Rider,Elvish Archer,Elvish Fighter,Elvish Shaman,Elvish Civilian,Elvish Prowler,Elvish Trapper,Elvish Hunter # (ordered according to portraits)
+        type=Elvish Sylph,Elvish Shyde,Elvish Avenger,Elvish Sharpshooter,Elvish Enchantress,Elvish Champion,Elvish Marshal,Elvish Outrider,Elvish Ranger,Elvish Marksman,Elvish Sorceress,Elvish Hero,Elvish Captain,Elvish Druid,Elvish Rider,Elvish Archer,Elvish Fighter,Elvish Shaman,Elvish Civilian,Elvish Prowler,Elvish Trapper,Elvish Hunter # (ordered according to portraits)
         side=1
         [not]
             id=Anlindë,Galas
