@@ -717,7 +717,7 @@
                             side=1
                             race=elf
                             [not]
-                                type=Elvish Civilian,Elvish Shaman,Elvish Druid,Elvish Shyde,Elvish Sorceress,Elvish Enchantress,Elvish Enchantress 2,Elvish Sylph
+                                type=Elvish Civilian,Elvish Shaman,Elvish Druid,Elvish Shyde,Elvish Sorceress,Elvish Enchantress,Elvish Sylph
                             [/not]
                             [not]
                                 id=Anlindë
