@@ -457,7 +457,7 @@
         [role]
             side=1
             role=magic user
-            type=Elvish Shyde,Elvish Sylph,Elvish Enchantress,Elvish Enchantress 2,Elvish Druid,Elvish Sorceress,Elvish Shaman
+            type=Elvish Shyde,Elvish Sylph,Elvish Enchantress,Elvish Druid,Elvish Sorceress,Elvish Shaman
         [/role]
 
         [recall]
@@ -1425,7 +1425,7 @@ The effects are said to be permanent, which only makes me more unsure as to whet
             type=Ghost,Wraith,Shadow,Spectre,Nightgaunt
         [/not]
         [not]
-            type=Elvish Shaman,Elvish Druid,Elvish Shyde,Elvish Sorceress,Elvish Enchantress,Elvish Enchantress 2,Elvish Sylph
+            type=Elvish Shaman,Elvish Druid,Elvish Shyde,Elvish Sorceress,Elvish Enchantress,Elvish Sylph
         [/not]
         [not]
             id=Anlindë,Mal Keshar,Galas
