@@ -1,23 +1,0 @@
-#textdomain wesnoth-Invasion_from_the_Unknown
-
-#
-# Alternate Elvish Enchantress unit that has the default AMLA and can't level
-# up to Elvish Sylph, for balancing purposes.
-#
-
-[unit_type]
-    id=Elvish Enchantress 2
-    [base_unit]
-        id=Elvish Enchantress
-    [/base_unit]
-    experience=150
-    advances_to=null
-    {AMLA_DEFAULT}
-    # The regular Enchantress will still come up in the help system and be
-    # listed as an advancement from Sorceress. We can't really change that,
-    # so just hope people don't notice that this Enchantress has her own
-    # help page and no advance-from list.
-    hide_help=yes
-[/unit_type]
-
-# kate: indent-mode normal; encoding utf-8; space-indent on;
